fdo#54721 fix vba not tracking currently selected doc correctly

Change-Id: I43b17dfc621d0aba76cdd33ebf97c457fa1da912
Signed-off-by: Petr Mladek <pmladek@suse.cz>